; ModuleID = '/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_attachDictRoundTrip.c'
source_filename = "/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_attachDictRoundTrip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i8* }

@state_prefixRoundTrip = common dso_local global i32 0, align 4
@state_extDictRoundTrip = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @state_attachDictRoundTrip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @state_attachDictRoundTrip(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 2
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** %3, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %11 = call i64 @state_trimDict(%struct.TYPE_7__* %10)
  store i64 %11, i64* %4, align 8
  %12 = call i32* (...) @LZ4_createStream()
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @LZ4_loadDict(i32* %13, i8* %14, i64 %15)
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @LZ4_attach_dictionary(i32 %19, i32* %20)
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i8*, i8** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @LZ4_setStreamDecode(i32 %24, i8* %25, i64 %26)
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %29 = load i32, i32* @state_prefixRoundTrip, align 4
  %30 = load i32, i32* @state_extDictRoundTrip, align 4
  %31 = call i32 @state_randomRoundTrip(%struct.TYPE_7__* %28, i32 %29, i32 %30)
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @LZ4_freeStream(i32* %32)
  ret void
}

declare dso_local i64 @state_trimDict(%struct.TYPE_7__*) #1

declare dso_local i32* @LZ4_createStream(...) #1

declare dso_local i32 @LZ4_loadDict(i32*, i8*, i64) #1

declare dso_local i32 @LZ4_attach_dictionary(i32, i32*) #1

declare dso_local i32 @LZ4_setStreamDecode(i32, i8*, i64) #1

declare dso_local i32 @state_randomRoundTrip(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @LZ4_freeStream(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
